--- a/blog-wasm/index.html
+++ b/blog-wasm/index.html
@@ -3,48 +3,424 @@
 <head>
     <meta charset="UTF-8" />
     <title>Blog WASM</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <style>
+        :root {
+            --bg: #0f172a;
+            --bg-elevated: #020617;
+            --card-bg: #020617;
+            --card-border: #1e293b;
+            --accent: #3b82f6;
+            --accent-soft: rgba(59, 130, 246, 0.15);
+            --accent-hover: #2563eb;
+            --danger: #ef4444;
+            --danger-hover: #b91c1c;
+            --text: #e5e7eb;
+            --text-soft: #9ca3af;
+            --input-bg: #020617;
+            --input-border: #1f2937;
+            --radius-lg: 16px;
+            --shadow-soft: 0 18px 45px rgba(15, 23, 42, 0.75);
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            min-height: 100vh;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text", sans-serif;
+            background: radial-gradient(circle at top, #1e293b 0, #020617 45%, #000 100%);
+            color: var(--text);
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            padding: 32px 16px;
+        }
+
+        .app-shell {
+            width: 100%;
+            max-width: 960px;
+            background: linear-gradient(155deg, rgba(15,23,42,0.96), rgba(15,23,42,0.98));
+            border-radius: 24px;
+            box-shadow: var(--shadow-soft);
+            border: 1px solid rgba(148, 163, 184, 0.2);
+            backdrop-filter: blur(18px);
+            padding: 24px 20px 28px;
+        }
+
+        @media (min-width: 768px) {
+            .app-shell {
+                padding: 28px 28px 32px;
+            }
+        }
+
+        .app-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 16px;
+            margin-bottom: 24px;
+        }
+
+        .app-title {
+            font-size: 1.6rem;
+            font-weight: 700;
+            letter-spacing: 0.03em;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .app-title-badge {
+            font-size: 0.7rem;
+            text-transform: uppercase;
+            padding: 3px 8px;
+            border-radius: 999px;
+            border: 1px solid rgba(148, 163, 184, 0.4);
+            color: var(--text-soft);
+        }
+
+        .app-subtitle {
+            font-size: 0.9rem;
+            color: var(--text-soft);
+            margin-top: 4px;
+        }
+
+        .status-pill {
+            padding: 6px 10px;
+            border-radius: 999px;
+            font-size: 0.8rem;
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            border: 1px solid rgba(148, 163, 184, 0.35);
+            background: rgba(15, 23, 42, 0.8);
+        }
+
+        .status-dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background: #22c55e;
+        }
+
+        /* Layout */
+
+        .layout {
+            display: grid;
+            grid-template-columns: 1.1fr 1.4fr;
+            gap: 20px;
+        }
+
+        @media (max-width: 900px) {
+            .layout {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        .card {
+            background: var(--card-bg);
+            border-radius: var(--radius-lg);
+            border: 1px solid var(--card-border);
+            padding: 16px 16px 18px;
+        }
+
+        .card + .card {
+            margin-top: 10px;
+        }
+
+        .card-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;
+            margin-bottom: 12px;
+        }
+
+        .card-title {
+            font-size: 0.95rem;
+            font-weight: 600;
+        }
+
+        .card-hint {
+            font-size: 0.75rem;
+            color: var(--text-soft);
+        }
+
+        /* Forms */
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .field-group {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+        }
+
+        label {
+            font-size: 0.8rem;
+            color: var(--text-soft);
+        }
+
+        input,
+        textarea {
+            padding: 7px 9px;
+            border-radius: 10px;
+            border: 1px solid var(--input-border);
+            background: var(--input-bg);
+            color: var(--text);
+            font-size: 0.85rem;
+        }
+
+        input::placeholder,
+        textarea::placeholder {
+            color: rgba(148, 163, 184, 0.6);
+        }
+
+        textarea {
+            min-height: 80px;
+            resize: vertical;
+        }
+
+        button {
+            cursor: pointer;
+            border-radius: 999px;
+            border: none;
+            padding: 7px 14px;
+            font-size: 0.85rem;
+            font-weight: 500;
+            letter-spacing: 0.02em;
+            transition: transform 0.08s ease, box-shadow 0.08s ease, background 0.12s ease, opacity 0.1s ease;
+        }
+
+        button:active {
+            transform: translateY(1px) scale(0.99);
+        }
+
+        .btn-primary {
+            background: var(--accent);
+            color: white;
+            box-shadow: 0 10px 18px rgba(59, 130, 246, 0.45);
+        }
+
+        .btn-primary:hover {
+            background: var(--accent-hover);
+        }
+
+        .btn-ghost {
+            background: transparent;
+            color: var(--text-soft);
+            border: 1px solid rgba(148, 163, 184, 0.5);
+        }
+
+        .btn-ghost:hover {
+            background: rgba(15, 23, 42, 0.8);
+            color: var(--text);
+        }
+
+        .btn-danger {
+            background: var(--danger);
+            color: #fee2e2;
+        }
+
+        .btn-danger:hover {
+            background: var(--danger-hover);
+        }
+
+        .btn-row {
+            display: flex;
+            justify-content: flex-end;
+            margin-top: 4px;
+        }
+
+        /* Posts */
+
+        #posts {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            font-size: 0.88rem;
+        }
+
+        .post {
+            border-radius: 14px;
+            border: 1px solid rgba(30, 64, 175, 0.6);
+            background: radial-gradient(circle at top left, rgba(37,99,235,0.22), #020617 55%);
+            padding: 10px 12px;
+        }
+
+        .post-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 4px;
+        }
+
+        .post-title {
+            font-weight: 600;
+        }
+
+        .post-meta {
+            font-size: 0.7rem;
+            color: var(--text-soft);
+        }
+
+        .post-content {
+            margin: 4px 0 6px;
+            line-height: 1.4;
+        }
+
+        .post-actions {
+            display: flex;
+            gap: 6px;
+            justify-content: flex-end;
+        }
+
+        /* Misc */
+
+        #auth-status {
+            font-size: 0.85rem;
+            color: var(--text-soft);
+        }
+
+        .top-row {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 8px;
+        }
+
+        .hint-text {
+            font-size: 0.75rem;
+            color: var(--text-soft);
+        }
+    </style>
 </head>
 <body>
-<h1>Blog WASM</h1>
+<div class="app-shell">
+    <header class="app-header">
+        <div>
+            <div class="app-title">
+                Blog WASM
+                <span class="app-title-badge">frontend</span>
+            </div>
+            <div class="app-subtitle">
+                JWT логин, посты и CRUD через Rust + WebAssembly
+            </div>
+        </div>
+        <div class="status-pill">
+            <span class="status-dot"></span>
+            <span id="auth-status">Проверка...</span>
+        </div>
+    </header>
 
-<section>
-    <h2>Статус</h2>
-    <div id="auth-status">Проверка...</div>
-    <button id="logout-btn" type="button">Выйти</button>
-</section>
+    <div class="layout">
+        <!-- Левая колонка: auth -->
+        <div>
+            <div class="card">
+                <div class="top-row">
+                    <div class="card-title">Аккаунт</div>
+                    <button id="logout-btn" class="btn-ghost" type="button">
+                        Выйти
+                    </button>
+                </div>
+                <div class="hint-text">
+                    Выйти из текущей сессии и удалить токен из браузера.
+                </div>
+            </div>
 
-<section>
-    <h2>Регистрация</h2>
-    <form id="register-form">
-        <input id="reg-username" placeholder="Username" />
-        <input id="reg-email" placeholder="Email" type="email" />
-        <input id="reg-password" placeholder="Password" type="password" />
-        <button type="submit">Зарегистрироваться</button>
-    </form>
-</section>
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-title">Регистрация</div>
+                    <div class="card-hint">Создаёт пользователя и сохраняет JWT</div>
+                </div>
+                <form id="register-form">
+                    <div class="field-group">
+                        <label for="reg-username">Имя</label>
+                        <input id="reg-username" placeholder="username" />
+                    </div>
 
-<section>
-    <h2>Вход</h2>
-    <form id="login-form">
-        <input id="login-username" placeholder="Username" />
-        <input id="login-password" placeholder="Password" type="password" />
-        <button type="submit">Войти</button>
-    </form>
-</section>
+                    <div class="field-group">
+                        <label for="reg-email">Email</label>
+                        <input id="reg-email" type="email" placeholder="user@example.com" />
+                    </div>
 
-<section>
-    <h2>Создать пост</h2>
-    <form id="create-post-form">
-        <input id="post-title" placeholder="Заголовок" />
-        <textarea id="post-content" placeholder="Содержание"></textarea>
-        <button type="submit">Опубликовать</button>
-    </form>
-</section>
+                    <div class="field-group">
+                        <label for="reg-password">Пароль</label>
+                        <input id="reg-password" type="password" placeholder="••••••••" />
+                    </div>
 
-<section>
-    <h2>Посты</h2>
-    <div id="posts"></div>
-</section>
+                    <div class="btn-row">
+                        <button type="submit" class="btn-primary">Регистрация</button>
+                    </div>
+                </form>
+            </div>
+
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-title">Вход</div>
+                    <div class="card-hint">Получение JWT токена</div>
+                </div>
+                <form id="login-form">
+                    <div class="field-group">
+                        <label for="login-email">Email</label>
+                        <input id="login-email" placeholder="user@example.com" />
+                    </div>
+
+                    <div class="field-group">
+                        <label for="login-password">Пароль</label>
+                        <input id="login-password" type="password" placeholder="••••••••" />
+                    </div>
+
+                    <div class="btn-row">
+                        <button type="submit" class="btn-primary">Войти</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <!-- Правая колонка: посты -->
+        <div>
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-title">Новый пост</div>
+                    <div class="card-hint">Только для аутентифицированных</div>
+                </div>
+                <form id="create-post-form">
+                    <div class="field-group">
+                        <label for="post-title">Заголовок</label>
+                        <input id="post-title" placeholder="Например: Мой первый пост" />
+                    </div>
+
+                    <div class="field-group">
+                        <label for="post-content">Текст</label>
+                        <textarea id="post-content" placeholder="Содержание поста..."></textarea>
+                    </div>
+
+                    <div class="btn-row">
+                        <button type="submit" class="btn-primary">Опубликовать</button>
+                    </div>
+                </form>
+            </div>
+
+            <div class="card" style="margin-top: 10px;">
+                <div class="card-header">
+                    <div class="card-title">Посты</div>
+                    <div class="card-hint">Список последних постов</div>
+                </div>
+                <div id="posts"></div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script type="module" src="main.js"></script>
 </body>
